fix: projectCard img overlapping

--- a/styles.css
+++ b/styles.css
@@ -193,8 +193,8 @@ a:hover {
     }
 
     .projectCard, .projectCard img {
-        width: 100%;
-        height: 100%;
+        width: 300px;
+        height: 300px;
     }
 
     /*SVG*/
